--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       crossorigin="anonymous"
     />
 
+    <!-- Lightbox CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
+    />
+
+    <!-- jQuery (requerido por Lightbox) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Lightbox JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
     <!-- Style -->
     <link rel="stylesheet" href="./css/main.css" />
 
@@ -278,49 +290,90 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/sala-1.jpg" class="d-block w-100" alt="..." />
+            <a href="./img/sala-1.jpg" data-lightbox="-" data-title="-">
+              <img
+                src="./img/sala-1.jpg"
+                class="d-block w-100"
+                alt="fotografia de la sala de la guest house"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img
-              src="./img/habitaciones/sala-2.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <a
+              href="./img/habitaciones/sala-2.jpg"
+              data-lightbox="-"
+              data-title="-"
+            >
+              <img
+                src="./img/habitaciones/sala-2.jpg"
+                class="d-block w-100"
+                alt="fotografia de la sala de la guest house"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img
-              src="./img/habitaciones/sala-4.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <a
+              href="./img/habitaciones/sala-4.jpg"
+              data-lightbox="-"
+              data-title="-"
+            >
+              <img
+                src="./img/habitaciones/sala-4.jpg"
+                class="d-block w-100"
+                alt="fotografia de la sala de la guest house"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img
-              src="./img/habitaciones/sahumerio.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <a
+              href="./img/habitaciones/sahumerio.jpg"
+              data-lightbox="-"
+              data-title="-"
+            >
+              <img
+                src="./img/habitaciones/sahumerio.jpg"
+                class="d-block w-100"
+                alt="fotografia de sahumerio en la guest house"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img
-              src="./img/habitaciones/pisicina-1.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <a
+              href="./img/habitaciones/pisicina-1.jpg"
+              data-lightbox="-"
+              data-title="-"
+            >
+              <img
+                src="./img/habitaciones/pisicina-1.jpg"
+                class="d-block w-100"
+                alt="fotografia de la piscina de dia"
+              />
+            </a>
           </div>
           <div class="carousel-item">
+            <a
+              href="./img/habitaciones/piscina-noche.jpg"
+              data-lightbox="-"
+              data-title="-"
+            ></a>
             <img
               src="./img/habitaciones/piscina-noche.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="fotografia de la piscina de noche"
             />
           </div>
           <div class="carousel-item">
-            <img
-              src="./img/habitaciones/patio.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <a
+              href="./img/habitaciones/patio.jpg"
+              data-lightbox="-"
+              data-title="-"
+            >
+              <img
+                src="./img/habitaciones/patio.jpg"
+                class="d-block w-100"
+                alt="fotogtafia del patio de la guest house"
+              />
+            </a>
           </div>
         </div>
         <button
@@ -352,7 +405,10 @@
           reservados.
         </p>
         <a href="index.html">
-        <img src="./img/logos/logo-blanco.png" alt="logo de loreto guest house"/>
+          <img
+            src="./img/logos/logo-blanco.png"
+            alt="logo de loreto guest house"
+          />
         </a>
       </div>
     </footer>
