textos en card centrados en mobile

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -98,7 +98,7 @@
     </header>
     <!-- principal -->
     <main>
-      <div class="container py-5" data-aos="fade-right">
+      <div class="container py-5 ibera-card" data-aos="fade-right">
         <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
           <div class="col-md-8">
@@ -178,7 +178,7 @@
       </div>
 
       <!-- Circuito guiado che gente cuera -->
-      <div class="container py-5" data-aos="fade-up">
+      <div class="container py-5 cuera-card" data-aos="fade-up">
         <div class="row align-items-center">
           <!-- Columna izquierda (Texto) -->
           <div class="col-md-4 order-md-1 order-2">
@@ -258,7 +258,7 @@
       </div>
 
       <!-- Circuito Guiado Loreto-->
-      <div class="container py-5" data-aos="fade-right">
+      <div class="container py-5 loreto-card" data-aos="fade-right">
         <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
           <div class="col-md-8">
