--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -107,7 +107,7 @@
         </p>
       </div>
       <!-- Yetapa -->
-      <div class="container py-5" data-aos="fade-right">
+      <div class="container py-5 yetapa-card" data-aos="fade-right">
         <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
           <div class="col-md-8">
@@ -181,7 +181,7 @@
       </div>
 
       <!-- Martin pescador -->
-      <div class="container py-5" data-aos="fade-up">
+      <div class="container py-5 martin-card" data-aos="fade-up">
         <div class="row align-items-center">
           <!-- Columna izquierda (Texto) -->
           <div class="col-md-4 order-md-1 order-2">
@@ -258,7 +258,7 @@
       </div>
 
       <!-- Jabiru-->
-      <div class="container py-5" data-aos="fade-right">
+      <div class="container py-5 jabiru-card" data-aos="fade-right">
         <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
           <div class="col-md-8">
