suma de tarjetas en actividades y formulario en boton de reserva de habitaciones

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <nav class="menuppal">
           <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="./pages/quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="./pages/quienes-somos.html">Quiénes Somos</a></li>
             <li><a href="./pages/habitaciones.html">Habitaciones</a></li>
-            <li><a href="./pages/direccion.html">Direccion</a></li>
+            <li><a href="./pages/direccion.html">Contacto</a></li>
             <li><a href="./pages/actividades.html">Actividades</a></li>
           </ul>
         </nav>
@@ -84,9 +84,9 @@
         <nav class="nav-header">
           <ul>
             <li><a href="index.html">INICIO</a></li>
-            <li><a href="./pages/quienes-somos.html">QUIENES SOMOS</a></li>
+            <li><a href="./pages/quienes-somos.html">QUIÉNES SOMOS</a></li>
             <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
-            <li><a href="./pages/direccion.html">DIRECCION</a></li>
+            <li><a href="./pages/direccion.html">CONTACTO</a></li>
             <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
@@ -155,8 +155,8 @@
               <div class="card-body">
                 <h5 class="card-title">Jabiru</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
+                  Segunda ave más grande de América, de imponente estatura con
+                  una envergadura de alas que...
                 </p>
                 <a href="./pages/habitaciones.html" class="btn btn-primary"
                   >Ir a Habitaciones</a
@@ -176,8 +176,8 @@
               <div class="card-body">
                 <h5 class="card-title">Yetapa</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
+                  Pájaro que simboliza el Emblema del Íbera. Habita en
+                  pastizales naturales...
                 </p>
                 <a href="./pages/habitaciones.html" class="btn btn-primary"
                   >Ir a Habitaciones</a
@@ -197,8 +197,8 @@
               <div class="card-body">
                 <h5 class="card-title">Martin Pescador</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
+                  Ave de llamativo plumaje. Vive a orillas de arroyos, ríos,
+                  lagunas, esteros y bañados...
                 </p>
                 <a href="./pages/habitaciones.html" class="btn btn-primary"
                   >Ir a Habitaciones</a
@@ -212,7 +212,7 @@
       <!-- Seccion 3: areas comunes -->
       <section class="texto-areas-comunes">
         <div class="texto-section4" data-aos="fade-left">
-          <h2>AREAS COMUNES</h2>
+          <h2>ÁREAS COMUNES</h2>
           <p>
             Nuestros espacios compartidos crean comunidad, <br />
             nuestras áreas comunes están diseñadas para encuentros auténticos
