--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -56,9 +56,9 @@
         <nav class="menuppal">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="quienes-somos.html">Quiénes Somos</a></li>
             <li><a href="habitaciones.html">Habitaciones</a></li>
-            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="direccion.html">Contacto</a></li>
             <li><a href="actividades.html">Actividades</a></li>
           </ul>
         </nav>
@@ -68,9 +68,9 @@
         <nav class="nav-header">
           <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
+            <li><a href="quienes-somos.html">QUIÉNES SOMOS</a></li>
             <li><a href="habitaciones.html">HABITACIONES</a></li>
-            <li><a href="direccion.html">DIRECCION</a></li>
+            <li><a href="direccion.html">CONTACTO</a></li>
             <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
@@ -78,7 +78,7 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1 data-aos="zoom-in">DIRECCION</h1>
+        <h1 data-aos="zoom-in">DIRECCIÓN</h1>
         <p data-aos="zoom-in">Estrategicamente ubicado, a metros de la avenida principal</p>
       </div>
     </header>
