--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -62,9 +62,9 @@
         <nav class="menuppal">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="quienes-somos.html">Quiénes Somos</a></li>
             <li><a href="habitaciones.html">Habitaciones</a></li>
-            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="direccion.html">Contacto</a></li>
             <li><a href="actividades.html">Actividades</a></li>
           </ul>
         </nav>
@@ -74,9 +74,9 @@
         <nav class="nav-header">
           <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
+            <li><a href="quienes-somos.html">QUIÉNES SOMOS</a></li>
             <li><a href="habitaciones.html">HABITACIONES</a></li>
-            <li><a href="direccion.html">DIRECCION</a></li>
+            <li><a href="direccion.html">CONTACTO</a></li>
             <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
@@ -165,11 +165,13 @@
           <div class="col-md-4 mt-4 mt-md-0">
             <h2 class="fw-bold text-primary">Yetapa</h2>
             <p class="mt-3 text-muted">
-              Breve descripcion sobre la habitacion y el porque del nombre.
+              Pájaro que simboliza el Emblema del Íbera. <br />Habita en
+              pastizales naturales. <br />Caza al vuelo. Especie en peligro de
+              extinción
             </p>
             <!-- Botón WhatsApp -->
             <a
-              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSerD5USF5lymAuJmXYG6OYQKnIVT67frtKkxmCqJbwPAQTRGA/viewform"
               target="_blank"
               class="whatsapp-btn"
             >
@@ -188,13 +190,13 @@
             <!-- Cambio de orden -->
             <h2 class="fw-bold text-primary">Martin Pescador</h2>
             <p class="mt-3 text-muted">
-              Habitación premium con vista panorámica a los esteros. Cama king
-              size, terraza privada y baño con ducha exterior. Disfrute de la
-              naturaleza en su máxima expresión con nuestro diseño bioclimático.
+              Ave de llamativo plumaje. <br />Vive a orillas de arroyos, ríos,
+              lagunas, esteros y bañados. <br />Se la observa solitario o en
+              pareja y para alimentarse se zambulle
             </p>
             <!-- Botón WhatsApp -->
             <a
-              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSerD5USF5lymAuJmXYG6OYQKnIVT67frtKkxmCqJbwPAQTRGA/viewform"
               target="_blank"
               class="whatsapp-btn"
             >
@@ -316,11 +318,14 @@
           <div class="col-md-4 mt-4 mt-md-0">
             <h2 class="fw-bold text-primary">Jabiru</h2>
             <p class="mt-3 text-muted">
-              Breve descripcion sobre la habitacion y el porque del nombre.
+              Segunda aves mas grande de América, <br />de imponente estatura
+              con una envergadura de alas que impresiona. <br />Plumaje blanco y
+              negro ; cuello con una banda roja que lo hace inconfundible.
+              <br />Solitaria, habita en zonas bajas, campos inundados.
             </p>
             <!-- Botón WhatsApp -->
             <a
-              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSerD5USF5lymAuJmXYG6OYQKnIVT67frtKkxmCqJbwPAQTRGA/viewform"
               target="_blank"
               class="whatsapp-btn"
             >
@@ -340,7 +345,10 @@
           reservados.
         </p>
         <a href="../index.html">
-        <img src="../img/logos/logo-blanco.png" alt="logo loreto guest house" />
+          <img
+            src="../img/logos/logo-blanco.png"
+            alt="logo loreto guest house"
+          />
         </a>
       </div>
     </footer>
