--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -50,9 +50,9 @@
         <nav class="menuppal">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="quienes-somos.html">Quiénes Somos</a></li>
             <li><a href="habitaciones.html">Habitaciones</a></li>
-            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="direccion.html">Contacto</a></li>
             <li><a href="actividades.html">Actividades</a></li>
           </ul>
         </nav>
@@ -62,9 +62,9 @@
         <nav class="nav-header">
           <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
+            <li><a href="quienes-somos.html">QUIÉNES SOMOS</a></li>
             <li><a href="habitaciones.html">HABITACIONES</a></li>
-            <li><a href="direccion.html">DIRECCION</a></li>
+            <li><a href="direccion.html">CONTACTO</a></li>
             <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
@@ -72,7 +72,7 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1 data-aos="zoom-in">QUIENES SOMOS</h1>
+        <h1 data-aos="zoom-in">QUIÉNES SOMOS</h1>
         <p data-aos="zoom-in">
           Loreto Guest House<br />
           Combina la comodidad del hogar con la magia de los Esteros.
@@ -84,7 +84,7 @@
     <main>
       <div class="texto-principal">
         <h2 class="titulo-principal" data-aos="fade-down">
-          Donde la autenticidad cobija al viajero
+          Dónde la autenticidad cobija al viajero
         </h2>
 
         <p class="parrafo-principal" data-aos="fade-up">
