--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -68,9 +68,9 @@
         <nav class="menuppal">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="quienes-somos.html">Quiénes Somos</a></li>
             <li><a href="habitaciones.html">Habitaciones</a></li>
-            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="direccion.html">Contacto</a></li>
             <li><a href="actividades.html">Actividades</a></li>
           </ul>
         </nav>
@@ -80,9 +80,9 @@
         <nav class="nav-header">
           <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
+            <li><a href="quienes-somos.html">QUIÉNES SOMOS</a></li>
             <li><a href="habitaciones.html">HABITACIONES</a></li>
-            <li><a href="direccion.html">DIRECCION</a></li>
+            <li><a href="direccion.html">CONTACTO</a></li>
             <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
@@ -98,6 +98,7 @@
     </header>
     <!-- principal -->
     <main>
+      <!-- Portal San Antonio -->
       <div class="container py-5 ibera-card" data-aos="fade-right">
         <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
@@ -137,12 +138,12 @@
               </div>
               <div class="col-md-6">
                 <a
-                  href="../img/actividades/pajarito-3.jpeg"
+                  href="../img/actividades/lancha.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/actividades/pajarito-3.jpeg"
+                    src="../img/actividades/lancha.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Fotografía de un ave llamado tijereta en los esteros"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -158,7 +159,7 @@
               Portal San Antonio - Aventura Ibera
             </h2>
             <p class="mt-3 text-muted">
-              Guia interpretativo, observacion de aves, recorrido por
+              Guia Interpretativo, recorrido por
               <strong>Aventura Ibera.</strong> <br />Estero Bola, seguro,
               desayuno o merienda, traslado. <br />Excursion en lancha.
               <br />Duracion: 3 horas <br />
@@ -177,20 +178,25 @@
         </div>
       </div>
 
-      <!-- Circuito guiado che gente cuera -->
+      <!-- Avistamiento de aves -->
       <div class="container py-5 cuera-card" data-aos="fade-up">
         <div class="row align-items-center">
           <!-- Columna izquierda (Texto) -->
           <div class="col-md-4 order-md-1 order-2">
             <!-- Cambio de orden -->
-            <h2 class="fw-bold text-primary">Circuito Guiado Che Gente Cuera</h2>
+            <h2 class="fw-bold text-primary">Observación de Aves</h2>
             <p class="mt-3 text-muted">
-            Guia interpretativo, circuito historico, cultural, religioso.
-            Lugares y personas emblematicas de las canciones de
-            <strong>Mario Bofill</strong>, seguro, refrigerio. <br />Excursion
-            vehicular, caminata.
-            <br>Duracion: 1 hora.
-            <br>Pack de 2 personas. Grupos.
+              <strong
+                >¡Tanto en Loreto Pueblo y alrededores es una zona de alta
+                riqueza de aves!</strong
+              >
+              <br />Para quienes no tiene experiencia puede ser la oportunidad
+              de conocer esta actividad. <br />De esta manera y dependiendo de
+              la estación puede ser posible sumar guacamayo rojo, yetapá grande
+              y de collar, mirasol estriado y chico, doradito copetón y pardo,
+              ñandú, burlisto castaño, urutaú, jabirú, y toda la diversidad de
+              Loreto estimada en unas 300 especies. <br />Opcional: con guía
+              local. <br />Con Traslado. <br />Seguro.
             </p>
             <!-- Botón WhatsApp -->
             <a
@@ -210,12 +216,12 @@
               <!-- Foto principal (grande) -->
               <div class="col-12">
                 <a
-                  href="../img/actividades/museo-bofill.jpeg"
+                  href="../img/actividades/guacamayo.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/actividades/museo-bofill.jpeg"
+                    src="../img/actividades/guacamayo.jpeg"
                     class="img-fluid rounded shadow-lg"
                     alt="fotografia del interior del Museo Artistico Mario Bofill"
                     style="height: 400px; width: 100%; object-fit: cover"
@@ -226,12 +232,12 @@
               <!-- Fotos secundarias -->
               <div class="col-md-6">
                 <a
-                  href="../img/actividades/mario-bofill.jpeg"
+                  href="../img/actividades/yetapa-grande.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/actividades/mario-bofill.jpeg"
+                    src="../img/actividades/yetapa-grande.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Fotografia de la estatua de Mario Bofill"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -240,12 +246,12 @@
               </div>
               <div class="col-md-6">
                 <a
-                  href="../img/actividades/chamame.jpeg"
+                  href="../img/actividades/pajarito-3.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/actividades/chamame.jpeg"
+                    src="../img/actividades/pajarito-3.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Musicos a la orilla del estero tocando chamame"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -308,6 +314,12 @@
                     style="height: 200px; width: 100%; object-fit: cover"
                   />
                 </a>
+                <a
+                  href="../img/actividades/loreto-playa.jpeg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                </a>
               </div>
             </div>
           </div>
@@ -316,11 +328,12 @@
           <div class="col-md-4 mt-4 mt-md-0">
             <h2 class="fw-bold text-primary">Circuito Guiado Loreto Pora</h2>
             <p class="mt-3 text-muted">
-            Guia interpretativo, <strong>circuito natural</strong>, miradores,
-            capillas domiciliarias, seguro, refrigerio, traslado. <br />Exursion
-            vehicular.
-            <br> Duracion: 2 horas. <br />
-            <br> Pack de 2 a 4 personas. Grupos
+              Guia interpretativo, <strong>circuito natural</strong>, miradores,
+              capillas domiciliarias, seguro, refrigerio, traslado.
+              <br />Exursion vehicular. <br />
+              Duracion: 2 horas. <br />
+              <br />
+              Pack de 2 a 4 personas. Grupos
             </p>
             <!-- Botón WhatsApp -->
             <a
@@ -331,6 +344,87 @@
               <i class="fab fa-whatsapp"></i>
               <span>Reserva ahora</span>
             </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Circuito guiado che gente cuera -->
+      <div class="container py-5 cuera-card" data-aos="fade-up">
+        <div class="row align-items-center">
+          <!-- Columna izquierda (Texto) -->
+          <div class="col-md-4 order-md-1 order-2">
+            <!-- Cambio de orden -->
+            <h2 class="fw-bold text-primary">
+              Circuito Guiado Che Gente Cuera
+            </h2>
+            <p class="mt-3 text-muted">
+              Guia interpretativo, circuito historico, cultural, religioso.
+              Lugares y personas emblematicas de las canciones de
+              <strong>Mario Bofill</strong>, seguro, refrigerio. <br />Excursion
+              vehicular, caminata. <br />Duracion: 1 hora. <br />Pack de 2
+              personas. Grupos.
+            </p>
+            <!-- Botón WhatsApp -->
+            <a
+              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              target="_blank"
+              class="whatsapp-btn"
+            >
+              <i class="fab fa-whatsapp"></i>
+              <span>Reserva ahora</span>
+            </a>
+          </div>
+
+          <!-- Columna derecha (Fotos) -->
+          <div class="col-md-8 order-md-2 order-1 mb-4 mb-md-0">
+            <!-- Cambio de orden -->
+            <div class="row g-3">
+              <!-- Foto principal (grande) -->
+              <div class="col-12">
+                <a
+                  href="../img/actividades/museo-bofill.jpeg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/actividades/museo-bofill.jpeg"
+                    class="img-fluid rounded shadow-lg"
+                    alt="fotografia del interior del Museo Artistico Mario Bofill"
+                    style="height: 400px; width: 100%; object-fit: cover"
+                  />
+                </a>
+              </div>
+
+              <!-- Fotos secundarias -->
+              <div class="col-md-6">
+                <a
+                  href="../img/actividades/mario-bofill.jpeg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/actividades/mario-bofill.jpeg"
+                    class="img-fluid rounded shadow"
+                    alt="Fotografia de la estatua de Mario Bofill"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6">
+                <a
+                  href="../img/actividades/chamame.jpeg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/actividades/chamame.jpeg"
+                    class="img-fluid rounded shadow"
+                    alt="Musicos a la orilla del estero tocando chamame"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
