correcion de titulo en contacto

--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -34,7 +34,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <title>Direccion</title>
+    <title>Contacto</title>
   </head>
   <body>
     <header>
@@ -78,7 +78,7 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1 data-aos="zoom-in">DIRECCIÓN</h1>
+        <h1 data-aos="zoom-in">CONTACTO</h1>
         <p data-aos="zoom-in">Estrategicamente ubicado, a metros de la avenida principal</p>
       </div>
     </header>
