correccion de acentos, padding de btn wpp

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h2>HABITACIONES</h2>
           <p>
             En Loreto Guest House, cada habitación<br />
-            es un refugio de paz y confort.<br />
+            Es un refugio de paz y confort.<br />
             Diseñadas para ofrecerte una experiencia única.
           </p>
         </div>
@@ -215,7 +215,7 @@
           <h2>ÁREAS COMUNES</h2>
           <p>
             Nuestros espacios compartidos crean comunidad, <br />
-            nuestras áreas comunes están diseñadas para encuentros auténticos
+            nuestras áreas comunes están diseñadas para encuentros auténticos.
           </p>
         </div>
       </section>
@@ -223,14 +223,14 @@
       <!-- Seccion 3.a: texto -->
       <section class="parrafo-areas-comunes">
         <p>
-          Refrescate en la piscina, comparte historias<br />
+          Refréscate en la piscina, comparte historias<br />
           en los cómodos sofás de la sala o <br />
-          disfruta un asado bajo las estrellas en la parrilla.
+        Disfruta un asado bajo las estrellas en la parrilla.
           <br />
           Los corredores sombreados y el jardín con casitas de pájaros<br />
           te conectan con la naturaleza, <br />
-          mientras la cocina equipada y el WiFi gratuito<br />
-          ofrecen ese balance perfecto entre aventura y comodidad. <br />
+          mientras la cocina equipada y el Wifi gratuito<br />
+          Ofrecen ese balance perfecto entre aventura y comodidad. <br />
           El verdadero lujo es sentirse como en casa,<br />
           rodeado de nuevos amigos y paisajes inolvidables.
         </p>
