--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -96,14 +96,14 @@
     <main>
       <div class="titulo-habitaciones" data-aos="fade-down">
         <h2>
-          Podes elegir entre tres opciones, <br />
-          con temacias locales
+          Podés elegir entre tres opciones, <br />
+          con temáticas locales
         </h2>
       </div>
       <div class="parrafo-habitaciones" data-aos="fade-up">
         <p>
           Todas las habitaciones cuentan con baño privado, aire acondicionado y
-          Wi-Fi
+          Wi-Fi.
         </p>
       </div>
       <!-- Yetapa -->
