--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -89,9 +89,9 @@
 
         <p class="parrafo-principal" data-aos="fade-up">
           Ubicados en la puerta de entrada a los Esteros del Iberá, somos más
-          que un alojamiento: <br />un refugio creado por amantes de la
+          que un alojamiento: <br />Un refugio creado por amantes de la
           naturaleza para quienes buscan conexión con lo esencial. <br />Cada
-          detalle honra el frágil ecosistema que nos rodea .Hospitalidad
+          detalle honra el frágil ecosistema que nos rodea. Hospitalidad
           guaraní, Yayetopa (reencuentro), <br />
           es nuestra filosofía de bienvenida Lo que nos diferencia: <br />✔
           Experiencias auténticas diseñadas por naturalistas locales <br />✔
