--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -92,7 +92,7 @@
       <div class="texto-header">
         <h1 data-aos="zoom-in">ACTIVIDADES</h1>
         <p data-aos="zoom-in">
-          Las mejores propuestas para que disfutes al maximo tu estadia
+          Las mejores propuestas para que disfrutes al máximo tu estadía
         </p>
       </div>
     </header>
@@ -159,10 +159,10 @@
               Portal San Antonio - Aventura Ibera
             </h2>
             <p class="mt-3 text-muted">
-              Guia Interpretativo, recorrido por
+              Guía Interpretativo, recorrido por
               <strong>Aventura Ibera.</strong> <br />Estero Bola, seguro,
-              desayuno o merienda, traslado. <br />Excursion en lancha.
-              <br />Duracion: 3 horas <br />
+              desayuno o merienda, traslado. <br />Excursión en lancha.
+              <br />Duración: 3 horas <br />
               Pack de 2 a 6 personas. Grupos
             </p>
             <!-- Botón WhatsApp -->
@@ -172,7 +172,7 @@
               class="whatsapp-btn"
             >
               <i class="fab fa-whatsapp"></i>
-              <span>Reserva ahora</span>
+              <span>Mas información</span>
             </a>
           </div>
         </div>
@@ -205,7 +205,7 @@
               class="whatsapp-btn"
             >
               <i class="fab fa-whatsapp"></i>
-              <span>Reserva ahora</span>
+              <span>Mas información</span>
             </a>
           </div>
 
@@ -289,12 +289,12 @@
               <!-- Fotos secundarias -->
               <div class="col-md-6">
                 <a
-                  href="../img/actividades/loreto.jpeg"
+                  href="../img/actividades/loreto-playa.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/actividades/loreto.jpeg"
+                    src="../img/actividades/loreto-playa.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Fotografia de una escultura con la palabra Loreto"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -315,7 +315,7 @@
                   />
                 </a>
                 <a
-                  href="../img/actividades/loreto-playa.jpeg"
+                  href="../img/actividades/loreto.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
@@ -326,23 +326,22 @@
 
           <!-- Columna derecha (Texto) -->
           <div class="col-md-4 mt-4 mt-md-0">
-            <h2 class="fw-bold text-primary">Circuito Guiado Loreto Pora</h2>
+            <h2 class="fw-bold text-primary">Circuito Guiado Loreto Porá</h2>
             <p class="mt-3 text-muted">
-              Guia interpretativo, <strong>circuito natural</strong>, miradores,
+              Guía Interpretativo, <strong>circuito natural</strong>, miradores,
               capillas domiciliarias, seguro, refrigerio, traslado.
-              <br />Exursion vehicular. <br />
-              Duracion: 2 horas. <br />
-              <br />
+              <br />Excursión vehicular. <br />
+              Duración: 2 horas. <br />
               Pack de 2 a 4 personas. Grupos
             </p>
             <!-- Botón WhatsApp -->
             <a
-              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información%20sobre"
               target="_blank"
               class="whatsapp-btn"
             >
               <i class="fab fa-whatsapp"></i>
-              <span>Reserva ahora</span>
+              <span>Mas información</span>
             </a>
           </div>
         </div>
@@ -358,20 +357,20 @@
               Circuito Guiado Che Gente Cuera
             </h2>
             <p class="mt-3 text-muted">
-              Guia interpretativo, circuito historico, cultural, religioso.
-              Lugares y personas emblematicas de las canciones de
-              <strong>Mario Bofill</strong>, seguro, refrigerio. <br />Excursion
-              vehicular, caminata. <br />Duracion: 1 hora. <br />Pack de 2
+              Guía Interpretativo, circuito histórico, cultural, religioso.
+              Lugares y personas emblemáticas de las canciones de
+              <strong>Mario Bofill</strong>, seguro, refrigerio. <br />Excursión
+              vehicular, caminata. <br />Duración: 1 hora. <br />Pack de 2
               personas. Grupos.
             </p>
             <!-- Botón WhatsApp -->
             <a
-              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información%20sobre"
               target="_blank"
               class="whatsapp-btn"
             >
               <i class="fab fa-whatsapp"></i>
-              <span>Reserva ahora</span>
+              <span>Mas información</span>
             </a>
           </div>
 
