--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -79,7 +79,7 @@
       <!-- Titulo -->
       <div class="texto-header">
         <h1 data-aos="zoom-in">CONTACTO</h1>
-        <p data-aos="zoom-in">Estrategicamente ubicado, a metros de la avenida principal</p>
+        <p data-aos="zoom-in">Estratégicamente ubicado, a metros de la avenida principal</p>
       </div>
     </header>
 
