correccion datos en contactos

--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -92,12 +92,13 @@
         <div class="row">
           <!-- Columna izquierda -->
           <div class="col-12 col-md-6 mb-4 titulo-lista">
+            <img src="../img/contacto.jpeg" alt="fotografia de Kuni" class="img-fluid mb-3 foto-kuni" />
             <h2 class="titulo-contacto">Contacto</h2>
             <ul>
-              <li>📞 Teléfono: (+54) 9 3781 49-1705</li>
-              <li>✉️ Email: correo@ejemplo.com</li>
+              <li>📞 Reserva Aquí: <a href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información">Mensaje Directo</a></li>
+              <li>✉️ Email: Kunyalvarez18@gmail.com </li>
               <li>📍 Dirección: Calle Brasil, Loreto, Corrientes.</li>
-              <li>🌐 Redes Sociales: Instagram, Facebook</li>
+              <li>🌐 Redes Sociales: <a href="https://www.instagram.com/loreto.guest.house_yayetopa?utm_source=qr&igsh=MW02OTBrbjhsanIwdQ==">Instagram</a></li>
             </ul>
           </div>
           <!-- Columna derecha -->
