--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -87,19 +87,25 @@
           Dónde la autenticidad cobija al viajero
         </h2>
 
-        <p class="parrafo-principal" data-aos="fade-up">
-          Ubicados en la puerta de entrada a los Esteros del Iberá, somos más
-          que un alojamiento: <br />Un refugio creado por amantes de la
-          naturaleza para quienes buscan conexión con lo esencial. <br />Cada
-          detalle honra el frágil ecosistema que nos rodea. Hospitalidad
-          guaraní, Yayetopa (reencuentro), <br />
-          es nuestra filosofía de bienvenida Lo que nos diferencia: <br />✔
-          Experiencias auténticas diseñadas por naturalistas locales <br />✔
-          Arquitectura que dialoga con el paisaje sin perturbarlo <br />✔
-          Compromiso con las comunidades del Iberá <br />"No somos anfitriones,
-          somos compañeros de aventura en este rincón único del mundo,
-          <br />donde el tiempo sigue el ritmo de la naturaleza." Kuni,
-          Fundadora y guardiana de este sueño.
+        <p
+          class="parrafo-principal"
+          data-aos="fade-up"
+          style="text-align: justify; margin-left: 5rem; margin-right: 5rem"
+        >
+          "No somos anfitriones, somos compañeros de aventura" KUNY ÁLVAREZ
+          propietaria y guardiana de este sueño, oriunda de la Provincia del
+          Chaco, Profesora de Danzas Folklóricas Argentina, Docente, Técnica en
+          Turismo y Guia del ÍBERA; ha diseñado el alojamiento para lograr
+          experiencias inolvidables en este rincón único del Mundo, donde el
+          Tiempo sigue el Ritmo de la Naturaleza Ubicados en la puerta de
+          entrada a los Esteros del Iberá, somos más que un alojamiento: Un
+          refugio creado por amantes de la naturaleza para quienes buscan
+          conexión con lo esencial. Cada detalle honra el frágil ecosistema que
+          nos rodea. Hospitalidad guaraní, Yayetopa (reencuentro), es nuestra
+          filosofía de bienvenida Lo que nos diferencia: 
+          <br>✔ Experiencias auténticas diseñadas por naturalistas locales 
+          <br>✔ Arquitectura que dialoga con el paisaje sin perturbarlo
+          <br>✔ Compromiso con las comunidades del Iberá.
         </p>
 
         <a
@@ -134,9 +140,7 @@
               -Living con sofás y con chimenea para calentar las noches de frio
             </li>
             <li>-Televisión de pantalla plana</li>
-            <li>
-              -Habitación con baño para personas con discapacidad
-            </li>
+            <li>-Habitación con baño para personas con discapacidad</li>
           </ul>
         </div>
       </div>
@@ -150,7 +154,10 @@
           reservados.
         </p>
         <a href="../index.html">
-        <img src="../img/logos/logo-blanco.png" alt="logo loreto guest house" />
+          <img
+            src="../img/logos/logo-blanco.png"
+            alt="logo loreto guest house"
+          />
         </a>
       </div>
     </footer>
