cambio de imagenes en la seccion habitaciones

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -116,12 +116,12 @@
               <!-- Foto principal (grande) -->
               <div class="col-12">
                 <a
-                  href="../img/habitaciones/yetapa-alta.jpg"
+                  href="../img/habitaciones/yetapa-baja.jpg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/yetapa-alta.jpg"
+                    src="../img/habitaciones/yetapa-baja.jpg"
                     class="img-fluid rounded shadow-lg"
                     alt="Foto principal de la habitación Yetapa"
                     style="height: 400px; width: 100%; object-fit: cover"
@@ -132,12 +132,12 @@
               <!-- Fotos secundarias -->
               <div class="col-md-6">
                 <a
-                  href="../img/habitaciones/yetapa-cama.jpg"
+                  href="../img/habitaciones/yetapa-2.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/yetapa-cama.jpg"
+                    src="../img/habitaciones/yetapa-2.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Fotografía de la cama en la habitación Yetapa"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -146,12 +146,12 @@
               </div>
               <div class="col-md-6">
                 <a
-                  href="../img/habitaciones/yetapa-baja.jpg"
+                  href="../img/habitaciones/yetapa-baño.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/yetapa-baja.jpg"
+                    src="../img/habitaciones/yetapa-baño.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Fotografía de la habitación Yetapa"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -228,12 +228,12 @@
               <!-- Fotos secundarias -->
               <div class="col-md-6">
                 <a
-                  href="../img/habitaciones/martin-pescador.jpg"
+                  href="../img/habitaciones/martin-pescado-out.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/martin-pescador.jpg"
+                    src="../img/habitaciones/martin-pescado-out.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Detalle Baño"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -242,12 +242,12 @@
               </div>
               <div class="col-md-6">
                 <a
-                  href="../img/habitaciones/martin-pescador.jpg"
+                  href="../img/habitaciones/martin-pescador-baño.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/martin-pescador.jpg"
+                    src="../img/habitaciones/martin-pescador-baño.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Vista al Esteros"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -285,12 +285,12 @@
               <!-- Fotos secundarias -->
               <div class="col-md-6">
                 <a
-                  href="../img/habitaciones/jabiru.jpg"
+                  href="../img/habitaciones/jabiru-baño.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/jabiru.jpg"
+                    src="../img/habitaciones/jabiru-baño.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Detalle Baño"
                     style="height: 200px; width: 100%; object-fit: cover"
@@ -299,12 +299,12 @@
               </div>
               <div class="col-md-6">
                 <a
-                  href="../img/habitaciones/jabiru.jpg"
+                  href="../img/habitaciones/jabiru-fuera.jpeg"
                   data-lightbox="-"
                   data-title="-"
                 >
                   <img
-                    src="../img/habitaciones/jabiru.jpg"
+                    src="../img/habitaciones/jabiru-fuera.jpeg"
                     class="img-fluid rounded shadow"
                     alt="Vista al Esteros"
                     style="height: 200px; width: 100%; object-fit: cover"
